[package]
name = "arithmetic-nonmax"
version = "0.6.0"
edition = "2024"
description = "Integer types that cannot be the maximum value, allowing for memory layout optimization and intuitive arithmetic operations."
license = "CC0-1.0"
repository = "https://github.com/northward1/arithmetic-nonmax"
readme = "README.md"
keywords = ["nonmax", "optimization", "niche", "integer", "arithmetic"]
categories = ["data-structures", "no-std", "embedded"]

[features]
default = ["std"]
alloc = []
std = ["alloc"]

[dev-dependencies]
divan = "0.1.21"
rand = "0.9.2"
iai = "0.1.1"
paste = "1.0"

[[bench]]
name = "comparison"
harness = false

[[bench]]
name = "iai_comparison"
harness = false
